# assignment

./: README.md  assignment.md  config.json  pyproject.toml  requirements.txt
data/: stroke_dataset_cleaned_test.csv  stroke_dataset_cleaned_train.csv
notebooks/: explore_data.ipynb  stroke_data.html
src/: cli.py  data_processor.py  data_validation.py  logging_config.py  main.py
tests/: test_data_validation.py
