[project]
name = "stroke_data_pipeline"
version = "0.0.1"
description = "Data processing pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pandera>=0.26.1",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
]
classifiers = ["Private :: Do Not Upload"]


[dependency-groups]
dev = [
    "pytest>=9.0.1",
]